[tool.poetry]
name = "mercadobitcoin-mms"
version = "0.1.0"
description = "Teste backend - Mercado Bitcoin"
authors = ["Anderson Bairo <ander_slash@yahoo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
python-decouple = "^3.4"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
